--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <link>main.css</link>
+    <link>main-css-stylings</link>
 <header>
     <h1>Practice Stylings</h1>
 </header>
